Add E2E tests, remove confirmation mechanism